--- a/src/main/WEBAPP/WEB-INF/web.xml
+++ b/src/main/WEBAPP/WEB-INF/web.xml
@@ -7,7 +7,7 @@
 
     <display-name>mlg</display-name>
     <welcome-file-list>
-        <welcome-file>main.html</welcome-file>
+        <welcome-file>main_page.html</welcome-file>
     </welcome-file-list>
 
 </web-app>
